--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_barcode_scanner: ^2.0.0
+  flutter_secure_storage: ^8.0.0
   http: ^0.13.5
   lottie: ^2.2.0
   provider: ^6.0.5
